# phl-courts-scraper-batch

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  data.dvc  pyproject.toml  setup.py
.dvc/: config
data/datasets/: police-gun-arrests-2015-2019.csv  police-gun-homicides-2015-2019.csv
data/results/police-gun-arrests-2015-2019/2021-01-13/chunks/: bail_0.json  bail_1.json  bail_10.json  bail_11.json  bail_12.json  bail_13.json  bail_14.json  bail_15.json  bail_16.json  bail_17.json  bail_18.json  bail_19.json  bail_2.json  bail_3.json  bail_4.json  bail_5.json  bail_6.json  bail_7.json  bail_8.json  bail_9.json  court_summary_0.json  court_summary_1.json  court_summary_10.json  court_summary_11.json  court_summary_12.json  court_summary_13.json  court_summary_14.json  court_summary_16.json  court_summary_17.json  court_summary_18.json  court_summary_19.json  court_summary_2.json  court_summary_3.json  court_summary_4.json  court_summary_5.json  court_summary_6.json  court_summary_7.json  court_summary_8.json  court_summary_9.json  portal_0.json  (+19 more)
data/results/police-gun-homicides-2015-2019/2021-01-13/: bail.json  portal.json
data/results/police-gun-homicides-2015-2019/2021-01-13/chunks/: bail_0.json  bail_1.json  bail_10.json  bail_11.json  bail_12.json  bail_13.json  bail_14.json  bail_15.json  bail_16.json  bail_17.json  bail_18.json  bail_19.json  bail_2.json  bail_3.json  bail_4.json  bail_5.json  bail_6.json  bail_7.json  bail_8.json  bail_9.json  court_summary_0.json  court_summary_1.json  court_summary_10.json  court_summary_11.json  court_summary_12.json  (+35 more)
phl_courts_scraper_batch/: __init__.py  __main__.py  aws.py  io.py  scrape.py
