[tool.poetry]
name = "phl_courts_scraper_batch"
version = "0.1.0"
description = "Python toolkit to run batch jobs on AWS using nickhand/phl-courts-scraper"
authors = ["Nick Hand <nicholas.adam.hand@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
click = "*"
boto3 = "*"
python-dotenv = "*"
desert = "*"
simplejson = "*"
openpyxl = "*"
schema = "*"
s3fs = "*"
phl-courts-scraper = { git = "https://github.com/nickhand/phl-courts-scraper.git", rev = "master" }
black = "*"
ipython = "*"


[tool.poetry.scripts]
phl-courts-scraper-batch = "phl_courts_scraper_batch.__main__:cli"

[build-system]
requires = ["poetry>=2"]
build-backend = "poetry.masonry.api"
